<resources>
    <string name="app_name">Pressure and pulse log</string>
    <string name="log_date_title">ВРЕМЯ</string>
    <string name="year_hint">Год</string>
    <string name="day_hint">День</string>
    <string name="time_hint">Время</string>
    <string name="pressure_and_pulse_title">ДАВЛЕНИЕ И ПУЛЬС</string>
    <string name="systolic_pressure_hint">Верхнее</string>
    <string name="diastolic_pressure_hint">Нижнее</string>
    <string name="pulse_hint">Пульс</string>
    <string name="confirm_log_entry">Добавить</string>
    <string name="pressure_separator">/</string>
    <string name="error_occurred">Произошла ошибка: %1$s</string>
    <string name="saved_successfully">Сохраненно</string>
    <string name="log_entry_section_title_date_format">dd MMMM</string>
    <string name="log_entry_time_format">HH:mm</string>
    <string name="entry_year_format">yyyy</string>
    <string name="date_format">MM.dd</string>
    <string name="time_format">HH:mm</string>
    <string name="log_link_clip_label">LogLink</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена.</string>
    <string name="error">Ошибка: %1$s</string>
    <string name="unavailable_clipboard_manager">Сервис буфера обмена не доступен</string>
</resources>